--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,6 +6,27 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇫🇷_FR_法国_1
+    type: ss
+    server: 51.158.54.209
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id002
+    name: 🇫🇷_FR_法国_2
+    type: ss
+    server: 51.159.221.224
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id003
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 51.158.37.62
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id004
     name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
     type: vmess
     server: 45.199.138.191
@@ -20,110 +41,45 @@ proxies:
       path: /path/1696251522438
       headers:
         host: www.42077230.xyz
-  - &id002
-    name: 🇫🇷_FR_法国_1
-    type: ss
-    server: 51.158.200.72
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id003
-    name: 🇫🇷_FR_法国_2
-    type: ss
-    server: 51.158.54.209
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id004
-    name: 🇫🇷_FR_法国_3
-    type: ss
-    server: 51.159.221.227
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
   - &id005
-    name: 🇵🇰_PK_巴基斯坦
-    type: trojan
-    server: 
-      jp1-reality.fp3kemyh-cm4s-2hak-2gb9-w3534umy2sq5.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
-    udp: true
-    password: a3f221f8-43d6-4363-8624-ce62d3db0202
-    sni: 13-231-155-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id006
     name: 🇺🇸_US_美国_1
-    type: vmess
-    server: wnd3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wnd3.shabijichang.com
-  - &id007
-    name: 🇩🇪_DE_德国
-    type: vmess
-    server: 49.13.115.8
-    port: 46818
-    cipher: auto
-    uuid: 42776ed6-aac6-4f94-daa5-c6bd198d09b2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vpnv2rayspeed
-      headers:
-        host: pve-asiatech-1.management.arvancdn.ir
-  - &id008
-    name: 🇫🇷_FR_法国_4
-    type: ss
-    server: 51.159.221.219
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id009
-    name: 🇫🇷_FR_法国_5
-    type: ss
-    server: 51.159.222.35
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id010
-    name: 🇫🇷_FR_法国_6
-    type: ss
-    server: 62.210.88.168
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id011
-    name: 🇺🇸_US_美国_2
     type: ss
     server: 89.187.181.179
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id012
-    name: 🇫🇷_FR_法国_7
+  - &id006
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 195.123.240.170
+    port: 41916
+    cipher: auto
+    uuid: 12772df9-485f-413c-edbf-3f562d61de4e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇫🇷_FR_法国_4
     type: ss
-    server: 62.210.88.148
+    server: 51.158.54.211
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id013
-    name: 🇺🇸_US_美国_3
+  - &id008
+    name: 🇫🇷_FR_法国_5
+    type: ss
+    server: 51.159.221.231
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id009
+    name: 🇨🇳_CN_中国
     type: vmess
-    server: lt1.992688.xyz
-    port: 2052
+    server: 124.220.57.75
+    port: 80
     cipher: auto
-    uuid: fa5fc74f-0f0b-4221-82ba-dc7cd24e24e5
+    uuid: 1b3dd95b-f6dc-4f20-97aa-3b365358419c
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -131,11 +87,11 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: vcus2.vpn66.eu.org
-  - &id014
-    name: 🇺🇸_US_美国_4
+        host: 124.220.57.75
+  - &id010
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度
     type: vmess
-    server: sbl2.shabijichang.com
+    server: mm2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -146,11 +102,63 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: sbl2.shabijichang.com
+        host: mm2.shabijichang.com
+  - &id011
+    name: 🇫🇷_FR_法国_6
+    type: ss
+    server: 51.159.221.223
+    port: 443
+    password: asdKkaskJKfnsa
+    cipher: aes-256-cfb
+  - &id012
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: fhc2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: fhc2.shabijichang.com
+  - &id013
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: jd2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 56278a1a-c7cc-459f-b00c-3037e4f99590
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: jd2.shabijichang.com
+  - &id014
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    type: vmess
+    server: mrb2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mrb2.shabijichang.com
   - &id015
     name: 🇺🇸_US_美国_5
     type: vmess
-    server: 172.67.184.13
+    server: 104.21.75.246
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -165,33 +173,7 @@ proxies:
   - &id016
     name: 🇺🇸_US_美国_6
     type: vmess
-    server: jd2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 56278a1a-c7cc-459f-b00c-3037e4f99590
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: jd2.shabijichang.com
-  - &id017
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 5.161.159.21
-    port: 443
-    cipher: auto
-    uuid: 3d1fab6e-3bd6-472b-8d9c-9934c04eaf40
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id018
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 104.21.75.246
+    server: 172.67.184.13
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -203,10 +185,17 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id019
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
+  - &id017
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: 54.186.250.178
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id018
+    name: 🇺🇸_US_美国_8
     type: vmess
-    server: mm2.shabijichang.com
+    server: wnd3.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -217,78 +206,153 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mm2.shabijichang.com
-  - &id020
+        host: wnd3.shabijichang.com
+  - &id019
     name: 🇺🇸_US_美国_9
     type: vmess
-    server: 156.225.67.104
-    port: 30000
+    server: 5.161.159.21
+    port: 443
     cipher: auto
-    uuid: 29a5d48e-24f1-48fd-a5e1-9a46cb31032f
+    uuid: 3d1fab6e-3bd6-472b-8d9c-9934c04eaf40
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id020
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: waynn.makeup
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: linkvws
+      headers:
+        host: waynn.makeup
+  - &id021
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: ml2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 10ea3b2a-b615-45f1-b1b7-c62bafe8c80c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ml2.shabijichang.com
+  - &id022
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: 107.167.16.85
+    port: 443
+    cipher: auto
+    uuid: 7640a1e7-9701-428e-a4b2-19b3e7dd6f9f
     alterId: 64
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /path/1696944806961
+      path: /path/080822272914
       headers:
-        host: www.41758112.xyz
-  - &id021
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
-    type: vmess
-    server: ld2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ld2.shabijichang.com
-  - &id022
-    name: 🇺🇸_US_美国->🇿🇦_ZA_南非
-    type: vmess
-    server: yhnsb3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: yhnsb3.shabijichang.com
+        host: www.51109057.xyz
   - &id023
-    name: 🇫🇷_FR_法国_8
+    name: 🇵🇰_PK_巴基斯坦_1
     type: trojan
-    server: 54.36.173.159
+    server: 
+      us1-reality.fp3kemyh-cm4s-2hak-2gb9-w3534umy2sq5.9d8f269f96b25232-759cbb36d6548597.kaufen
     port: 443
     udp: true
-    password: e4f288433b
-    sni: pol1.connecton.surf
+    password: a3f221f8-43d6-4363-8624-ce62d3db0202
+    sni: 13-231-155-134.nhost.00cdn.com
     skip-cert-verify: true
     network: tcp
   - &id024
-    name: 🇫🇷_FR_法国->🇳🇱_NL_荷兰
+    name: 🇦🇫_AF_阿富汗
+    type: ss
+    server: 121.127.46.147
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id025
+    name: 🇺🇸_US_美国_13
     type: vmess
-    server: 156.249.18.4
+    server: wnd2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: wnd2.shabijichang.com
+  - &id026
+    name: 🇩🇪_DE_德国_1
+    type: trojan
+    server: 5.104.108.109
+    port: 443
+    udp: true
+    password: 2a9abeb7-6f97-4d33-9069-f6e009d88455
+    skip-cert-verify: true
+    network: tcp
+  - &id027
+    name: 🇩🇪_DE_德国_2
+    type: trojan
+    server: 5.104.108.120
+    port: 443
+    udp: true
+    password: 2a9abeb7-6f97-4d33-9069-f6e009d88455
+    sni: 20-24-33-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id028
+    name: 🇫🇷_FR_法国_7
+    type: trojan
+    server: 13.39.98.163
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id029
+    name: 🇵🇰_PK_巴基斯坦_2
+    type: trojan
+    server: 
+      jp1-reality.fp3kemyh-cm4s-2hak-2gb9-w3534umy2sq5.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: 7e23957d-535a-4dc6-9482-e6f44518da87
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id030
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 45.199.138.186
     port: 30000
     cipher: auto
-    uuid: 84d1de11-ce12-4a15-8312-1338356d4ac4
+    uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf
     alterId: 64
     tls: true
     skip-cert-verify: true
-    servername: www.57424349.xyz
     network: ws
     ws-opts:
-      path: /path/1697719506275
-  - &id025
-    name: 🇺🇸_US_美国_10
+      path: /path/1696682720138
+      headers:
+        host: www.19229362.xyz
+  - &id031
+    name: 🇺🇸_US_美国_15
     type: vmess
     server: asb2.shabijichang.com
     port: 80
@@ -302,47 +366,6 @@ proxies:
       path: /
       headers:
         host: asb2.shabijichang.com
-  - &id026
-    name: 🇺🇸_US_美国->🇸🇦_SA_沙特阿拉伯
-    type: vmess
-    server: jd3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: jd3.shabijichang.com
-  - &id027
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
-    type: vmess
-    server: mm3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm3.shabijichang.com
-  - &id028
-    name: 🇷🇴_RO_罗马尼亚
-    type: vmess
-    server: 5.182.37.119
-    port: 12581
-    cipher: auto
-    uuid: 51554d87-7fd0-4dd1-9277-bcbb2d12b64b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -397,6 +420,9 @@ proxy-groups:
       - *id026
       - *id027
       - *id028
+      - *id029
+      - *id030
+      - *id031
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -430,6 +456,9 @@ proxy-groups:
       - *id026
       - *id027
       - *id028
+      - *id029
+      - *id030
+      - *id031
   - name: SELECT
     type: select
     proxies:
@@ -461,6 +490,9 @@ proxy-groups:
       - *id026
       - *id027
       - *id028
+      - *id029
+      - *id030
+      - *id031
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
