--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,7 +6,22 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇬🇧_GB_英国
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
+    type: vmess
+    server: 104.17.18.26
+    port: 80
+    cipher: auto
+    uuid: 5180444a-4756-43b4-960b-49eb9052e4e8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: a.109420.xyz
+  - &id002
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_1
     type: vmess
     server: mrb2.shabijichang.com
     port: 80
@@ -20,40 +35,25 @@ proxies:
       path: /
       headers:
         host: mrb2.shabijichang.com
-  - &id002
+  - &id003
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 104.21.75.246
-    port: 80
+    server: fra.mahdivps.tk
+    port: 2053
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: bf922ee1-c3e2-4229-af39-ed63c6aa09f7
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /tvc
       headers:
-        host: sbl2.shabijichang.com
-  - &id003
-    name: 🇩🇪_DE_德国_1
-    type: vmess
-    server: 49.13.115.8
-    port: 46818
-    cipher: auto
-    uuid: 42776ed6-aac6-4f94-daa5-c6bd198d09b2
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vpnv2rayspeed
-      headers:
-        host: pve-asiatech-1.management.arvancdn.ir
+        host: fra.mahdivps.tk
   - &id004
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: 172.67.184.13
+    server: sbl2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -81,9 +81,39 @@ proxies:
       headers:
         host: flkf2.shabijichang.com
   - &id006
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
     type: vmess
-    server: mm2.shabijichang.com
+    server: 45.199.138.191
+    port: 30000
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1696251522438
+      headers:
+        host: www.42077230.xyz
+  - &id007
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: jd2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: 56278a1a-c7cc-459f-b00c-3037e4f99590
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: jd2.shabijichang.com
+  - &id008
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国_2
+    type: vmess
+    server: ld2.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -94,47 +124,62 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mm2.shabijichang.com
-  - &id007
-    name: 🇫🇷_FR_法国->🇳🇱_NL_荷兰
+        host: ld2.shabijichang.com
+  - &id009
+    name: 🇺🇸_US_美国_4
     type: vmess
-    server: 156.249.18.4
-    port: 30000
-    cipher: auto
-    uuid: 84d1de11-ce12-4a15-8312-1338356d4ac4
-    alterId: 64
-    tls: true
+    server: 206.168.190.219
+    port: 2082
+    cipher: none
+    uuid: e31ca750-71f7-11ee-b920-1239d0255272
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: ws
-  - &id008
+    ws-opts:
+      path: /vmws
+  - &id010
+    name: 🇺🇸_US_美国->🇧🇷_BR_巴西
+    type: vmess
+    server: sbl4.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl4.shabijichang.com
+  - &id011
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: 206.168.190.219
+    port: 8080
+    cipher: auto
+    uuid: e31ca750-71f7-11ee-b920-1239d0255272
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmws
+  - &id012
     name: 🇫🇷_FR_法国
     type: trojan
-    server: 13.37.163.17
+    server: 35.181.12.210
     port: 22222
     udp: true
-    password: telegram-id-privatevpns
+    password: telegram-id-directvpn
     sni: trj.rollingnext.co.uk
     skip-cert-verify: true
     network: tcp
-  - &id009
-    name: 🇺🇸_US_美国_3
+  - &id013
+    name: 🇺🇸_US_美国->🇸🇦_SA_沙特阿拉伯
     type: vmess
-    server: 156.225.67.104
-    port: 30000
-    cipher: auto
-    uuid: 29a5d48e-24f1-48fd-a5e1-9a46cb31032f
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1696944806961
-      headers:
-        host: www.41758112.xyz
-  - &id010
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: wnd3.shabijichang.com
+    server: jd3.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -145,11 +190,11 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: wnd3.shabijichang.com
-  - &id011
+        host: jd3.shabijichang.com
+  - &id014
     name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
     type: vmess
-    server: 104.17.18.26
+    server: 104.26.8.44
     port: 80
     cipher: auto
     uuid: 5180444a-4756-43b4-960b-49eb9052e4e8
@@ -161,113 +206,6 @@ proxies:
       path: /
       headers:
         host: a.109420.xyz
-  - &id012
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 5.161.159.21
-    port: 443
-    cipher: auto
-    uuid: 3d1fab6e-3bd6-472b-8d9c-9934c04eaf40
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id013
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_3
-    type: vmess
-    server: hdlb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: hdlb2.shabijichang.com
-  - &id014
-    name: 🇩🇪_DE_德国_2
-    type: trojan
-    server: 3.66.186.194
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id015
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度_4
-    type: vmess
-    server: mm3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mm3.shabijichang.com
-  - &id016
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: wnd2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wnd2.shabijichang.com
-  - &id017
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 45.199.138.186
-    port: 30000
-    cipher: auto
-    uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1696682720138
-      headers:
-        host: www.19229362.xyz
-  - &id018
-    name: 🇺🇸_US_美国->🇭🇺_HU_匈牙利
-    type: vmess
-    server: www.speedtest.net
-    port: 80
-    cipher: auto
-    uuid: 62515af2-1dd9-467b-9dd3-774abefb6a62
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: hu1.xv2ray.net
-  - &id019
-    name: 🇵🇰_PK_巴基斯坦
-    type: trojan
-    server: 
-      hk1-reality.fp3kemyh-cm4s-2hak-2gb9-w3534umy2sq5.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
-    udp: true
-    password: a3f221f8-43d6-4363-8624-ce62d3db0202
-    sni: 13-231-155-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -308,11 +246,6 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -332,11 +265,6 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
   - name: SELECT
     type: select
     proxies:
@@ -354,11 +282,6 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
-      - *id015
-      - *id016
-      - *id017
-      - *id018
-      - *id019
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
