--- a/pub/jiang.yaml
+++ b/pub/jiang.yaml
@@ -5,77 +5,53 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 二爷翻墙 https://1808.cf Node_1, server: 155.94.235.109, port: 46166, type: vmess, uuid: 4dd5fa96-4a73-45cc-ebf7-d968323c53a5, alterId: 0, cipher: auto, tls: false}
-  - {name: 二爷翻墙 https://1808.cf Node_2, server: csgo.com, port: 443, type: vmess, uuid: 6383e7fb-3128-41de-e6cf-5db0868f84fe, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /scp比赛专用节点, headers: {Host: scp.cloudflare88.eu.org}}}
-  - {name: 二爷翻墙 https://1808.cf Node_3, server: share.relay.wiki, port: 443, type: vmess, uuid: 3b651a5b-546f-4ae1-83eb-34fd403dca80, alterId: 0, cipher: auto, tls: true, network: ws, ws-opts: {path: /3b651a5b-546f-4ae1-83eb-34fd403dca80, headers: {Host: share.relay.wiki}}}
-  - {name: 二爷翻墙 https://1808.cf Node_4, server: cdn-downloads.000023.xyz, port: 443, type: trojan, password: A3A1371F-017B-4A5A-99F2-8F4AFF0798B1, sni: downloads.000023.xyz, skip-cert-verify: true}
+  - {name: CC2-server ws1, server: www.who.int, port: 80, type: vmess, uuid: 52736503-49aa-4704-ada2-d7059a9f697e, alterId: 0, cipher: auto, tls: false, network: ws, ws-opts: {path: /52736503-49aa-4704-ada2-d7059a9f697e-vmess, headers: {Host: cc2.1808.cf}}}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - DIRECT
-      - 二爷翻墙 https://1808.cf Node_1
-      - 二爷翻墙 https://1808.cf Node_2
-      - 二爷翻墙 https://1808.cf Node_3
-      - 二爷翻墙 https://1808.cf Node_4
+      - CC2-server ws1
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
-      - 二爷翻墙 https://1808.cf Node_1
-      - 二爷翻墙 https://1808.cf Node_2
-      - 二爷翻墙 https://1808.cf Node_3
-      - 二爷翻墙 https://1808.cf Node_4
+      - CC2-server ws1
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 二爷翻墙 https://1808.cf Node_1
-      - 二爷翻墙 https://1808.cf Node_2
-      - 二爷翻墙 https://1808.cf Node_3
-      - 二爷翻墙 https://1808.cf Node_4
+      - CC2-server ws1
   - name: 📲 电报信息
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 二爷翻墙 https://1808.cf Node_1
-      - 二爷翻墙 https://1808.cf Node_2
-      - 二爷翻墙 https://1808.cf Node_3
-      - 二爷翻墙 https://1808.cf Node_4
+      - CC2-server ws1
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
-      - 二爷翻墙 https://1808.cf Node_1
-      - 二爷翻墙 https://1808.cf Node_2
-      - 二爷翻墙 https://1808.cf Node_3
-      - 二爷翻墙 https://1808.cf Node_4
+      - CC2-server ws1
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 二爷翻墙 https://1808.cf Node_1
-      - 二爷翻墙 https://1808.cf Node_2
-      - 二爷翻墙 https://1808.cf Node_3
-      - 二爷翻墙 https://1808.cf Node_4
+      - CC2-server ws1
   - name: 📢 谷歌FCM
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 二爷翻墙 https://1808.cf Node_1
-      - 二爷翻墙 https://1808.cf Node_2
-      - 二爷翻墙 https://1808.cf Node_3
-      - 二爷翻墙 https://1808.cf Node_4
+      - CC2-server ws1
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -98,10 +74,7 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 二爷翻墙 https://1808.cf Node_1
-      - 二爷翻墙 https://1808.cf Node_2
-      - 二爷翻墙 https://1808.cf Node_3
-      - 二爷翻墙 https://1808.cf Node_4
+      - CC2-server ws1
 rules:
   - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
   - DOMAIN-SUFFIX,ip6-localhost,🎯 全球直连
